--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </div>
 
     <div class="album-art-wrapper">
-      <img src="images/placeholder.jpg" alt="Pamela Hulbert Birthday Album Art" class="album-art" id="albumArt" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
+      <img src="images/Silhouette Style.png" alt="Pamela Hulbert Birthday Album Art" class="album-art" id="albumArt" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
       <div style="width: 500px; height: 500px; background: linear-gradient(135deg, rgba(0, 128, 128, 0.3), rgba(255, 210, 127, 0.2)); border-radius: 12px; display: none; align-items: center; justify-content: center; font-size: 4rem; color: #ffd27f; text-shadow: 0 0 20px rgba(255, 210, 127, 0.5);">🎙️</div>
     </div>
 
@@ -464,7 +464,7 @@
     </div>
 
     <div class="visualizer-container">
-      <img src="images/placeholder.jpg" alt="Pamela Hulbert" class="visualizer-placeholder" id="visualizerPlaceholder" onerror="this.style.display='none';" />
+      <img src="images/Silhouette Style.png" alt="Pamela Hulbert" class="visualizer-placeholder" id="visualizerPlaceholder" onerror="this.style.display='none';" />
       <canvas id="visualizer"></canvas>
     </div>
 
